--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "json-server": "^0.17.3",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.3.0",
