--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "web-shop-frontend",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "Quasar App",
-  "author": "e.vukcevic <vukcevic.eleonora@schoenberger-group.com>",
+  "productName": "E Commerce",
+  "author": "e.vukcevic ",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "json-server": "^0.17.3",
     "quasar": "^2.6.0",
